{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 24,
  "lineage": "6f5804b7-1657-2978-96cd-369371d584b5",
  "resources": [
    {
      "module": "module.NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSGblk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "NSG1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsgruleset",
            "location": "westus",
            "name": "nsgruleset",
            "resource_group_name": "myapp-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsgruleset",
            "resource_group_name": "myapp-dev-rg",
            "subscription_id": "689d8795-0870-408a-b842-d792486c2dba"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.Rgblk"
          ]
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsgdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsgruleset",
            "location": "westus",
            "name": "nsgruleset",
            "resource_group_name": "myapp-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/25"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/frontend_subnet",
            "name": "frontend_subnet",
            "network_security_group_id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsgruleset",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myapp-dev-rg",
            "virtual_network_name": "vnet1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicblk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/networkInterfaces/nic_front",
            "internal_domain_name_suffix": "dnte1egnwqaezi3yht0lmojxaf.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/frontend_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "nic_front",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "myapp-dev-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic_front",
            "resource_group_name": "myapp-dev-rg",
            "subscription_id": "689d8795-0870-408a-b842-d792486c2dba"
          },
          "dependencies": [
            "module.nic.data.azurerm_subnet.subdata",
            "module.rg.azurerm_resource_group.Rgblk",
            "module.subnet.azurerm_subnet.subblk",
            "module.vnets.azurerm_virtual_network.nbetblk"
          ]
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NSGAssocblk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/frontend_subnet",
            "network_security_group_id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsgruleset",
            "subnet_id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/frontend_subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nic.data.azurerm_network_security_group.nsgdata",
            "module.nic.data.azurerm_subnet.subdata",
            "module.rg.azurerm_resource_group.Rgblk",
            "module.subnet.azurerm_subnet.subblk",
            "module.vnets.azurerm_virtual_network.nbetblk"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subblk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sub1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/25"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/frontend_subnet",
            "name": "frontend_subnet",
            "network_security_group_id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsgruleset",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myapp-dev-rg",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "frontend_subnet",
            "resource_group_name": "myapp-dev-rg",
            "subscription_id": "689d8795-0870-408a-b842-d792486c2dba",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.Rgblk",
            "module.vnets.azurerm_virtual_network.nbetblk"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nicdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "VM1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/networkInterfaces/nic_front",
            "ip_configuration": [
              {
                "name": "ip_1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/frontend_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "nic_front",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "myapp-dev-rg"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vnets",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "nbetblk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Vnet_1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "904d661b-b4cd-4c00-a3b8-3cf4b6393705",
            "id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "westus",
            "name": "vnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "myapp-dev-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/25"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/frontend_subnet",
                "name": "frontend_subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/689d8795-0870-408a-b842-d792486c2dba/resourceGroups/myapp-dev-rg/providers/Microsoft.Network/networkSecurityGroups/nsgruleset"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet1",
            "resource_group_name": "myapp-dev-rg",
            "subscription_id": "689d8795-0870-408a-b842-d792486c2dba"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.Rgblk"
          ]
        }
      ]
    }
  ]
}